# CS2308SPRING2026-TICTACTOE

./: .gitignore  CMakeLists.txt  Instructions.md  LICENSE  ProgramFlow.md  Readme.md  SelfReflections.md  main.cpp  run.sh
include/: play.h  view.h
src/: play.cpp  view.cpp
